<resources>
    <string name="app_name">Metrics Detection BETA OFFLINE</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="predications">Predictions</string>
    <string name="interface_time">Interface time:</string>
    <string name="interface_time_value">%1$sms</string>
    <string name="interface_mm_value">%.2f mm</string>
    <string name="interface_predictions">%1$s</string>
    <string name="interface_qty">%1$d</string>
    <string name="interface_color">%1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pre_process_time">Preprocess time:</string>
    <string name="_0ms">0ms</string>
    <string name="_0mm">0mm</string>
    <string name="_0pred">No predictions</string>
    <string name="post_process_time">Postprocess time:</string>
    <string name="differentiate_classes">Differentiate classes</string>
    <string name="mask_out">Hide mask</string>
    <string name="separate_out">Separate output</string>
    <string name="empty_string" />
    <string name="show_label">Show label</string>
    <string name="patreon_message">Support me on Patreon</string>
    <string name="settings">Settings</string>
    <string name="smooth_edges">Smooth edges</string>
    <string name="mm_px">Millimeters per pixel</string>
    <string name="predictions">Predictions</string>
    <string name="qty">QTY</string>
    <string name="color">Variety</string>
    <string name="sync_status">Sync status</string>
    <string name="create_batch">Create batch</string>
    <string name="add_bunch">Add bunch</string>
    <string name="new_bunch">New bunch</string>
    <string name="add_more_photos">Add more photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="photo_a_front">Front</string>
    <string name="photo_b_back">Back</string>
    <string name="missing_photo_b_back">Missing Back</string>
    <string name="bunch_title">Bunch %1$d</string>
    <string name="bunch_fused">Bunch %1$d</string>
    <string name="bunch_incomplete">Bunch %1$d · incomplete</string>
    <string name="bunch_processing">Bunch %1$d · processing</string>
    <string name="bunch_review">Bunch %1$d · review</string>
    <string name="no_valid_grapes">No valid bunch detected.</string>
    <string name="grapes_unit">berries</string>
    <string name="invalid_bunch_message">Replace the image if the result is incorrect.</string>
    <string name="review_capture">Review capture</string>
    <string name="delete_bunch">Delete bunch</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Gallery</string>
    <string name="replace_photo">Replace</string>
    <string name="delete_photo">Delete</string>
    <string name="photo_uploaded">Loaded</string>
    <string name="photo_pending">Pending</string>
    <string name="status_pending">Pending</string>
    <string name="status_incomplete">Incomplete</string>
    <string name="status_processing">Processing</string>
    <string name="status_processed">Processed</string>
    <string name="status_fused">Front/Back</string>
    <string name="status_error">Error</string>
    <string name="photo_progress_empty">0/2 photos</string>
    <string name="photo_progress_one">1/2 photos</string>
    <string name="photo_progress_complete">2/2 photos</string>
    <string name="fused_result_badge">Front/Back Result</string>
    <string name="save_batch">Save batch</string>
    <string name="saving">Saving...</string>
    <string name="language_selector_title">Select your language</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_english">English</string>
    <string name="change_language">Change language</string>
    <string name="language">Language</string>
    <string name="language_chip">ES / EN</string>
    <string name="email_label">Email</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_label">Password</string>
    <string name="email_address_label">Email address</string>
    <string name="invite_code_label">Invite code</string>
    <string name="name_label">Name</string>
    <string name="lastname_label">Last name</string>
    <string name="rut_register_hint">RUT (e.g. 12345678-9)</string>
    <string name="new_password_label">New password</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="already_have_account_login">Already have an account? Log in</string>
    <string name="filter_hint">Filter...</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_support">Support</string>
    <string name="sample_lote_id">#123456</string>
    <string name="sample_detail_company">Company XYZ</string>
    <string name="sample_detail_vessel">Vessel 1</string>
    <string name="sample_detail_block">Block A</string>
    <string name="sample_time">09:00 AM</string>
    <string name="sample_date">26 April 2025</string>
    <string name="sample_images_count">5 Img</string>
    <string name="progress_detail_placeholder">(Detail)</string>
    <string name="chevron_right">&gt;</string>
    <string name="metric_placeholder">--</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="sign_up">Sign up</string>
    <string name="login_empty_fields">Please enter username and password</string>
    <string name="login_invalid_credentials">Invalid credentials</string>
    <string name="connection_error">Connection error</string>
    <string name="batch_origin">Batch Origin</string>
    <string name="company">Company</string>
    <string name="vessel">Vessel</string>
    <string name="block">Block</string>
    <string name="variety">Variety</string>
    <string name="process_batch">Process bunches</string>
    <string name="process_bunches">Process bunches</string>
    <string name="next_capture_guide">Next capture: Bunch %1$d · %2$s</string>
    <string name="next_capture_sample">Start by capturing the Front</string>
    <string name="capture_front_prompt">Start by capturing the Front</string>
    <string name="capture_back_prompt">Now capture the Back</string>
    <string name="select_exactly_two_photos">Select a photo to complete the bunch</string>
    <string name="gallery_two_photos_read_error">Could not read the selected photo</string>
    <string name="gallery_photo_read_error">Could not read the selected photo</string>
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_open_error">Error opening camera</string>
    <string name="confirm_title">Confirmation</string>
    <string name="confirm_save_batch">Do you want to save the batch with the current photos?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="batch_saved_locally">Batch saved locally</string>
    <string name="batch_save_error">Error saving batch</string>
    <string name="confirm_reset_batch">Are you sure you want to reset the batch?</string>
    <string name="reset">Reset</string>
    <string name="resolution_warning">Use square photos to preserve the full frame.</string>
    <string name="incomplete_bunch_message">Capture the Back to fuse.</string>
    <string name="second_photo_to_generate_result">Capture the Back to fuse.</string>
    <string name="second_photo_required_to_calculate">The Back of the bunch is missing to calculate.</string>
    <string name="empty_bunch_message">Start by capturing the Front.</string>
    <string name="add_photo_a_first">Capture the Front first.</string>
    <string name="add_photo_a_to_fuse">Start by capturing the Front.</string>
    <string name="camera_capture_prompt">Capture the full bunch with good lighting.</string>
    <string name="bunch_progressive_guide">Capture Front and Back of the same bunch.</string>
    <string name="processing_photo_pair">Processing Front + Back...</string>
    <string name="processing_bunch_photos">Processing bunch photos...</string>
    <string name="fused_prediction_info">Qty: %1$d\nMean: %2$.2f mm\nMode: %3$.2f mm\nSTD: %4$.2f</string>
    <string name="bunch_result_info">Qty: %1$d\nMean: %2$.2f mm\nMode: %3$.2f mm\nSTD: %4$.2f</string>
    <string name="photos_processing_save_error">All photos must finish processing before saving.</string>
    <string name="batch_prepare_error">Could not prepare batch results.</string>
    <string name="no_processed_bunch_to_save">Add a complete bunch to save the batch.</string>
    <string name="pending">Pending...</string>
    <string name="normalizing_image">Normalizing image...</string>
    <string name="processing">Processing...</string>
    <string name="prediction_info_legacy">Variety: %1$s\nQTY: %2$d\nMean: %3$.2f mm\nMode: %4$.2f mm\nSTD: %5$.2f</string>
    <string name="prediction_missing">No prediction obtained</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_image">Delete this image?</string>
    <string name="confirm_delete_bunch">Delete this bunch?</string>
    <string name="error_prefix">ERROR: %1$s</string>
    <string name="start_batch">Start batch</string>
    <string name="sample_company">Company</string>
    <string name="sample_vessel">Vessel</string>
    <string name="sample_block">Block</string>
    <string name="sample_variety">Autumn Crisp</string>
    <string name="sample_index">#1</string>
    <string name="prediction_info_placeholder">Pred info</string>
    <string name="photo_pair_section_title">Bunch photos</string>
    <string name="result_consolidated">Front/Back Result</string>
    <string name="result_qty_label">Qty</string>
    <string name="result_ready">Result calculated with Front and Back.</string>
    <string name="result_ready_single">Result ready.</string>
    <string name="complete">Complete</string>
    <string name="front_missing">Front missing</string>
    <string name="back_missing">Back missing</string>
    <string name="front_image_missing">Front image missing</string>
    <string name="back_image_missing">Back image missing</string>
    <string name="front_image_error">Front image error</string>
    <string name="back_image_error">Back image error</string>
    <string name="low_quality_image_detected">Low quality image detected</string>
    <string name="processing_failed">Processing failed</string>
    <string name="add_front_image">Add front</string>
    <string name="add_back_image">Add back</string>
    <string name="replace_front_image">Replace front</string>
    <string name="replace_back_image">Replace back</string>
    <string name="replace_image">Replace image</string>
    <string name="try_again">Try again</string>
    <string name="recalculate">Recalculate</string>
    <string name="swap_front_back">Swap front / back</string>
    <string name="confirm_swap_front_back">Swapping front and back will mark the bunch as pending recalculation. Images will not be lost.</string>
    <string name="summary">Summary</string>
    <string name="all">All</string>
    <string name="processed">Processed</string>
    <string name="pending_filter">Pending</string>
    <string name="empty_batch_title">No bunches yet</string>
    <string name="empty_batch_message">Capture or select images to start the analysis.</string>
    <string name="register">Register</string>
    <string name="continue_button">Continue</string>
    <string name="consent_label">I accept the processing of my data and images for the operation of the application. The information will be used solely for the company\'s operational purposes, to process, save, and sync the batches associated with my account. It will not be used for external commercial purposes nor disclosed to third parties beyond the services necessary to operate the platform.</string>
</resources>